RESOLVED FIXED122540
AX: VoiceOver does not speak aria-expanded state on iOS
https://bugs.webkit.org/show_bug.cgi?id=122540
Summary AX: VoiceOver does not speak aria-expanded state on iOS
Attachments
patch (1.31 KB, patch)
2013-10-08 23:52 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2013-10-08 23:52:09 PDT
Mario Sanchez Prada
Comment 2 2013-10-09 01:29:02 PDT
Comment on attachment 213756 [details] patch I've observed you're not exposing canSetExpandedAttribute() at all in this IOS wrapper, which is something you do in the Mac one by means of the attributeName() method: - (BOOL)accessibilityIsAttributeSettable:(NSString*)attributeName { [...] if ([attributeName isEqualToString:NSAccessibilityDisclosingAttribute]) return m_object->canSetExpandedAttribute(); [...] } In ATK we expose the very same thing with ATK_STATE_EXPANDABLE, so that's it got my attention. Anyway, just pointing it out in case it was not intentional. The current patch is Ok in any case.
chris fleizach
Comment 3 2013-10-09 08:53:01 PDT
(In reply to comment #2) > (From update of attachment 213756 [details]) > I've observed you're not exposing canSetExpandedAttribute() at all in this IOS wrapper, which is something you do in the Mac one by means of the attributeName() method: > > - (BOOL)accessibilityIsAttributeSettable:(NSString*)attributeName > { > [...] > if ([attributeName isEqualToString:NSAccessibilityDisclosingAttribute]) > return m_object->canSetExpandedAttribute(); > [...] > } > > In ATK we expose the very same thing with ATK_STATE_EXPANDABLE, so that's it got my attention. > > Anyway, just pointing it out in case it was not intentional. The current patch is Ok in any case. Thanks for looking at this. On iOS, we don't have a notion of attribute names. Properties are just exposed and queried for when desired
WebKit Commit Bot
Comment 4 2013-10-09 09:15:05 PDT
Comment on attachment 213756 [details] patch Clearing flags on attachment: 213756 Committed r157171: <http://trac.webkit.org/changeset/157171>
WebKit Commit Bot
Comment 5 2013-10-09 09:15:07 PDT
All reviewed patches have been landed. Closing bug.
Mario Sanchez Prada
Comment 6 2013-10-09 09:32:24 PDT
(In reply to comment #3) > [...] > Thanks for looking at this. On iOS, we don't have a notion of attribute names. > Properties are just exposed and queried for when desired Ah! That explains why you don't have a attributeName() method in the IOS wrapper :)
Note You need to log in before you can comment on or make changes to this bug.