AX: VoiceOver does not speak aria-expanded state on iOS https://bugs.webkit.org/show_bug.cgi?id=122540

Expose aria-pressed state for iOS.

Reviewed by Mario Sanchez Prada.

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityIsExpanded]):


Canonical link: https://commits.webkit.org/140640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157171 268f45cc-cd09-0410-ab3c-d52691b4dbfc